Trabajo con SASS

--- a/pages/estadios.html
+++ b/pages/estadios.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ESTADIOS</title>
 
-    <link rel="stylesheet" href="../css/styless.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 
     <link rel="shortcut icon" href="../assets/icons/logo-copa-america-vertical.png" type="image/x-icon">
 
@@ -60,8 +60,8 @@
           <div class="footer-links">
               <h3 class="subrayado-abajo textnegrita">Enlaces rápidos</h3>
               <ul class="textnegrita">
-                  <li><a href="grupos.html">Grupos</a></li>
                   <li><a href="../index.html">Home</a></li>
+                  <li><a href="grupos.html">Grupos</a></li>
                   <li><a href="historia.html">Historia</a></li>
                   <li><a href="contacto.html">Contacto</a></li>
               </ul>
@@ -85,7 +85,6 @@
             <li><a href="https://www.youtube.com/@Coderhouse"target="_blank"><img src="../assets/icons/youtube.png" alt="logo de youtube"></a></li>
         </ul>
       </div>
-  </div>
   </footer>
 
 
