--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="css/styless.css">
+    <link rel="stylesheet" href="css/estilos.css">
 </head>
 <body>
     <header>
@@ -186,7 +186,8 @@
             </div>
             
             <div class="footer-links">
-                <h3 class="subrayado-abajo textnegrita">Enlaces rápidos</h3>
+                <h3 class="subrayado-abajo textnegrita">Enlaces rápidos
+                </h3>
                 <ul class="textnegrita">
                     <li><a href="pages/grupos.html">Grupos</a></li>
                     <li><a href="pages/estadios.html">Estadios</a></li>
@@ -207,7 +208,11 @@
           <h3 class="subrayado-arriba textnegrita">REDES</h3>
           <ul>
               <li><a href="https://www.facebook.com/Coderhouse"target="_blank"><img src="assets/icons/facebook.png" alt="logo de facebook"></a></li>
-              <li><a href="https://www.instagram.com/coderhouse/"target="_blank"><img src="assets/icons/instagram.png" alt="logo de instagram"></a></li>
+              <li>
+                <a href="https://www.instagram.com/coderhouse/"target="_blank">
+                  <img src="assets/icons/instagram.png" alt="logo de instagram">
+                </a>
+              </li>
               <li><a href="https://x.com/coderhouse"target="_blank"><img src="assets/icons/twitter.png" alt="logo de twitter"></a></li>
               <li><a href="https://web.whatsapp.com/"target="_blank"><img src="assets/icons/whatsapp.png" alt="logo de whatsapp"></a></li>
               <li><a href="https://www.youtube.com/@Coderhouse"target="_blank"><img src="assets/icons/youtube.png" alt="logo de youtube"></a></li>
