--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -7,7 +7,7 @@
 
     <link rel="shortcut icon" href="../assets/icons/logo-copa-america-vertical.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="../css/styless.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -77,10 +77,10 @@
             <div class="footer-links">
                 <h3 class="subrayado-abajo textnegrita">Enlaces rápidos</h3>
                 <ul class="textnegrita">
+                  <li><a href="../index.html">Home</a></li>
                     <li><a href="grupos.html">Grupos</a></li>
                     <li><a href="estadios.html">Estadios</a></li>
                     <li><a href="historia.html">Historia</a></li>
-                    <li><a href="../index.html">Home</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
@@ -102,7 +102,6 @@
               <li><a href="https://www.youtube.com/@Coderhouse"target="_blank"><img src="../assets/icons/youtube.png" alt="logo de youtube"></a></li>
           </ul>
         </div>
-    </div>
 </footer>
 
 
