--- a/pages/grupos.html
+++ b/pages/grupos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
-    <link rel="stylesheet" href="../css/styless.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 
     <link rel="shortcut icon" href="../assets/icons/logo-copa-america-vertical.png" type="image/x-icon">
 
@@ -488,7 +488,6 @@
           <li><a href="https://www.youtube.com/@Coderhouse"target="_blank"><img src="../assets/icons/youtube.png" alt="logo de youtube"></a></li>
         </ul>
       </div>
-  </div>
   </footer>
 
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
