--- a/pages/historia.html
+++ b/pages/historia.html
@@ -7,7 +7,7 @@
 
     <link rel="shortcut icon" href="../assets/icons/logo-copa-america-vertical.png" type="image/x-icon">
 
-    <link rel="stylesheet" href="../css/styless.css">
+    <link rel="stylesheet" href="../css/estilos.css">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -51,6 +51,48 @@
           </div>
         </div>
     </nav>
+
+
+
+
+
+
+
+    <footer>
+      <div class="footer-container">
+          <div class="footer-logo">
+              <img src="../assets/icons/logo-copa-america-vertical.png" alt="Logo de la copa">
+          </div>
+          
+          <div class="footer-links">
+              <h3 class="subrayado-abajo textnegrita">Enlaces rápidos</h3>
+              <ul class="textnegrita">
+                  <li><a href="../index.html">Home</a></li>
+                  <li><a href="grupos.html">Grupos</a></li>
+                  <li><a href="estadios.html">Estadios</a></li>
+                  <li><a href="contacto.html">Contacto</a></li>
+              </ul>
+          </div>
+          <div class="footer-contact">
+              <h3 class="subrayado-abajo textnegrita">Contacto</h3>
+             
+              <p>Dirección: 123 Calle Principal, Ciudad</p>
+              <p>Teléfono: (123) 456-7890</p>
+              <p>Email: info@empresa.com</p>
+              <p class="textnegrita">&copy; 2024 Copa America. Todos los derechos reservados.</p>
+          </div>
+      </div>
+      <div class="social-icons">
+        <h3 class="subrayado-arriba textnegrita">REDES</h3>
+        <ul>
+          <li><a href="https://www.facebook.com/Coderhouse"target="_blank"><img src="../assets/icons/facebook.png" alt="logo de facebook"></a></li>
+          <li><a href="https://www.instagram.com/coderhouse/"target="_blank"><img src="../assets/icons/instagram.png" alt="logo de instagram"></a></li>
+          <li><a href="https://x.com/coderhouse"target="_blank"><img src="../assets/icons/twitter.png" alt="logo de twitter"></a></li>
+          <li><a href="https://web.whatsapp.com/"target="_blank"><img src="../assets/icons/whatsapp.png" alt="logo de whatsapp"></a></li>
+          <li><a href="https://www.youtube.com/@Coderhouse"target="_blank"><img src="../assets/icons/youtube.png" alt="logo de youtube"></a></li>
+        </ul>
+      </div>
+  </footer>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
