--- a/pages/estadios.html
+++ b/pages/estadios.html
@@ -51,6 +51,68 @@
         </div>
     </nav>
 
+    <main>
+      <div class="container-estadios">
+        <div id="estadio-1">
+          <section>
+            <img src="../assets/images/Estadios/MercedesBenz_Stadium.jpg" alt="Foto del estadio Mereces-Benz Stadium">
+          </section>
+        </div>
+
+        <div id="estadio-2">
+
+        </div>
+
+        <div id="estadio-3">
+
+        </div>
+
+        <div id="estadio-4">
+
+        </div>
+
+        <div id="estadio-5">
+
+        </div>
+
+        <div id="estadio-6">
+
+        </div>
+
+        <div id="estadio-7">
+
+        </div>
+
+        <div id="estadio-8">
+
+        </div>
+
+        <div id="estadio-9">
+
+        </div>
+
+        <div id="estadio-10">
+
+        </div>
+
+        <div id="estadio-11">
+
+        </div>
+
+        <div id="estadio-12">
+
+        </div>
+
+        <div id="estadio-13">
+
+        </div>
+
+        <div id="estadio-14">
+
+        </div>
+      </div>
+    </main>
+
     <footer>
       <div class="footer-container">
           <div class="footer-logo">
