Creo seccion noticias y detalles en otras secciones

--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>CONTACTO</title>
+    <title>Copa America | Contacto</title>
 
     <link rel="shortcut icon" href="../assets/icons/logo-copa-america-vertical.png" type="image/x-icon">
 
@@ -41,7 +41,7 @@
                 <a class="nav-link" href="estadios.html">Estadios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="historia.html">Historia</a>
+                <a class="nav-link" href="noticia.html">Noticia</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="#">Contacto</a>
@@ -84,7 +84,7 @@
                   <li><a href="../index.html">Home</a></li>
                     <li><a href="grupos.html">Grupos</a></li>
                     <li><a href="estadios.html">Estadios</a></li>
-                    <li><a href="historia.html">Historia</a></li>
+                    <li><a href="noticia.html">Noticia</a></li>
                 </ul>
             </div>
             <div class="footer-contact">
