--- a/pages/grupos.html
+++ b/pages/grupos.html
@@ -9,7 +9,7 @@
 
     <link rel="shortcut icon" href="../assets/icons/logo-copa-america-vertical.png" type="image/x-icon">
 
-    <title>GRUPOS</title>
+    <title>Copa America | Grupos</title>
 </head>
 
 
@@ -42,7 +42,7 @@
                 <a class="nav-link" href="estadios.html">Estadios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="historia.html">Historia</a>
+                <a class="nav-link" href="noticia.html">Noticia</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contacto.html">Contacto</a>
@@ -465,7 +465,7 @@
               <ul class="textnegrita">
                   <li><a href="../index.html">Home</a></li>
                   <li><a href="estadios.html">Estadios</a></li>
-                  <li><a href="historia.html">Historia</a></li>
+                  <li><a href="noticia.html">Noticia</a></li>
                   <li><a href="contacto.html">Contacto</a></li>
               </ul>
           </div>
