--- a/index.html
+++ b/index.html
@@ -3,10 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>COPA AMERICA</title>
+    <title>Copa America</title>
     <link rel="shortcut icon" href="assets/icons/logo-copa-america-vertical.png" type="image/x-icon">
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+
+    <script src="https://kit.fontawesome.com/c792bd6173.js" crossorigin="anonymous"></script>
 
     <link rel="stylesheet" href="css/estilos.css">
 </head>
@@ -43,7 +45,7 @@
                 <a class="nav-link" href="pages/estadios.html">Estadios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="pages/historia.html">Historia</a>
+                <a class="nav-link" href="pages/noticia.html">Noticia</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="pages/contacto.html">Contacto</a>
@@ -191,7 +193,7 @@
                 <ul class="textnegrita">
                     <li><a href="pages/grupos.html">Grupos</a></li>
                     <li><a href="pages/estadios.html">Estadios</a></li>
-                    <li><a href="pages/historia.html">Historia</a></li>
+                    <li><a href="pages/noticia.html">Noticia</a></li>
                     <li><a href="pages/contacto.html">Contacto</a></li>
                 </ul>
             </div>
