--- a/pages/estadios.html
+++ b/pages/estadios.html
@@ -3,11 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>ESTADIOS</title>
+    <title>Copa America | Estadios</title>
 
     <link rel="stylesheet" href="../css/estilos.css">
 
     <link rel="shortcut icon" href="../assets/icons/logo-copa-america-vertical.png" type="image/x-icon">
+
+    <script src="https://kit.fontawesome.com/c792bd6173.js" crossorigin="anonymous"></script>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
@@ -41,7 +43,7 @@
                 <a class="nav-link" href="#">Estadios</a>
               </li>
               <li class="nav-item">
-                <a class="nav-link" href="historia.html">Historia</a>
+                <a class="nav-link" href="noticia.html">Noticia</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="contacto.html">Contacto</a>
@@ -51,64 +53,317 @@
         </div>
     </nav>
 
-    <main>
+    <main class="main-estadios">
       <div class="container-estadios">
         <div id="estadio-1">
           <section>
-            <img src="../assets/images/Estadios/MercedesBenz_Stadium.jpg" alt="Foto del estadio Mereces-Benz Stadium">
+            <article>
+              <img src="../assets/images/Estadios/MercedesBenz_Stadium.jpg" alt="Foto del estadio Mereces-Benz Stadium">
+            </article>
+            <div>
+              <h3>
+                Mercedes-Benz Stadium
+              </h3>
+              <div>
+                <div class="datos-estadios">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <p>Atlanta, GA</p>
+                </div>
+                <div class="datos-estadios">
+                  <i class="fa-regular fa-user"></i>
+                  <p>71.000</p>
+                </div>
+              </div>
+            </div>
+           
+
           </section>
         </div>
 
         <div id="estadio-2">
-
+          <section>
+            <article>
+              <img src="../assets/images/Estadios/HardRock_Stadium.jpg" alt="Foto del estadio Hard Rock Stadium">
+            </article>
+            <div>
+              <h3>
+                Hard Rock Stadium
+              </h3>
+              <div>
+                <div class="datos-estadios">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <p>Miami Gardens, FL</p>
+                </div>
+                <div class="datos-estadios">
+                  <i class="fa-regular fa-user"></i>
+                  <p>65.300</p>
+                </div>
+              </div>
+            </div>
         </div>
 
         <div id="estadio-3">
-
+          <section>
+            <article>
+              <img src="../assets/images/Estadios/AT&T _Stadium.jpg" alt="Foto del estadio AT&T Stadium">
+            </article>
+            <div>
+              <h3>
+                AT&T Stadium
+              </h3>
+              <div>
+                <div class="datos-estadios">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <p>Arlington, TX</p>
+                </div>
+                <div class="datos-estadios">
+                  <i class="fa-regular fa-user"></i>
+                  <p>80.000</p>
+                </div>
+              </div>
+            </div>
         </div>
 
         <div id="estadio-4">
-
+          <section>
+            <article>
+              <img src="../assets/images/Estadios/GEHAFieldatArrowhead_Stadium.jpg" alt="Foto del estadio GEHA Field at Arrowhead Stadium">
+            </article>
+            <div>
+              <h3>
+                GEHA Field at Arrowhead Stadium
+              </h3>
+              <div>
+                <div class="datos-estadios">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <p>Kansas City, MO</p>
+                </div>
+                <div class="datos-estadios">
+                  <i class="fa-regular fa-user"></i>
+                  <p>76.400</p>
+                </div>
+              </div>
+            </div>
         </div>
 
         <div id="estadio-5">
-
+          <section>
+            <article>
+              <img src="../assets/images/Estadios/Q2_Stadium.jpg" alt="Foto del estadio Q2 Stadium">
+            </article>
+            <div>
+              <h3>
+                Q2 Stadium
+              </h3>
+              <div>
+                <div class="datos-estadios">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <p>Austin, TX</p>
+                </div>
+                <div class="datos-estadios">
+                  <i class="fa-regular fa-user"></i>
+                  <p>20.700</p>
+                </div>
+              </div>
+            </div>
         </div>
 
         <div id="estadio-6">
-
+          <section>
+            <article>
+              <img src="../assets/images/Estadios/BankofAmerica_Stadium.png" alt="Foto del estadio Bank of America Stadium">
+            </article>
+            <div>
+              <h3>
+                Bank of America Stadium
+              </h3>
+              <div>
+                <div class="datos-estadios">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <p>Charlotte, NC</p>
+                </div>
+                <div class="datos-estadios">
+                  <i class="fa-regular fa-user"></i>
+                  <p>74.500</p>
+                </div>
+              </div>
+            </div>
         </div>
 
         <div id="estadio-7">
-
+          <section>
+            <article>
+              <img src="../assets/images/Estadios/MetLife_Stadium.png" alt="Foto del estadio MetLife Stadium">
+            </article>
+            <div>
+              <h3>
+                MetLife Stadium
+              </h3>
+              <div>
+                <div class="datos-estadios">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <p>East Rutherford, NJ</p>
+                </div>
+                <div class="datos-estadios">
+                  <i class="fa-regular fa-user"></i>
+                  <p>82.500</p>
+                </div>
+              </div>
+            </div>
         </div>
 
         <div id="estadio-8">
-
+          <section>
+            <article>
+              <img src="../assets/images/Estadios/StateFarm_Stadium.png" alt="Foto del estadio State Farm Stadium">
+            </article>
+            <div>
+              <h3>
+                State Farm Stadium
+              </h3>
+              <div>
+                <div class="datos-estadios">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <p>Glendale, AZ</p>
+                </div>
+                <div class="datos-estadios">
+                  <i class="fa-regular fa-user"></i>
+                  <p>63.400</p>
+                </div>
+              </div>
+            </div>
         </div>
 
         <div id="estadio-9">
-
+          <section>
+            <article>
+              <img src="../assets/images/Estadios/NRG_Stadium.png" alt="Foto del estadio NRG Stadium">
+            </article>
+            <div>
+              <h3>
+                NRG Stadium
+              </h3>
+              <div>
+                <div class="datos-estadios">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <p>Houston, TX</p>
+                </div>
+                <div class="datos-estadios">
+                  <i class="fa-regular fa-user"></i>
+                  <p>72.200</p>
+                </div>
+              </div>
+            </div>
         </div>
 
         <div id="estadio-10">
-
+          <section>
+            <article>
+              <img src="../assets/images/Estadios/SoFi_Stadium.png" alt="Foto del estadio SoFi Stadium">
+            </article>
+            <div>
+              <h3>
+                SoFi Stadium
+              </h3>
+              <div>
+                <div class="datos-estadios">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <p>Inglewood, CA</p>
+                </div>
+                <div class="datos-estadios">
+                  <i class="fa-regular fa-user"></i>
+                  <p>70.000</p>
+                </div>
+              </div>
+            </div>
         </div>
 
         <div id="estadio-11">
-
+          <section>
+            <article>
+              <img src="../assets/images/Estadios/Children’sMercyPark.png" alt="Foto del estadio Children’s Mercy Park">
+            </article>
+            <div>
+              <h3>
+                Children’s Mercy Park
+              </h3>
+              <div>
+                <div class="datos-estadios">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <p>Kansas City, KS</p>
+                </div>
+                <div class="datos-estadios">
+                  <i class="fa-regular fa-user"></i>
+                  <p>18.500</p>
+                </div>
+              </div>
+            </div>
         </div>
 
         <div id="estadio-12">
-
+          <section>
+            <article>
+              <img src="../assets/images/Estadios/Allegiant_Stadium.jpg" alt="Foto del estadio Allegiant Stadium">
+            </article>
+            <div>
+              <h3>
+                Allegiant Stadium
+              </h3>
+              <div>
+                <div class="datos-estadios">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <p>Las Vegas, NV</p>
+                </div>
+                <div class="datos-estadios">
+                  <i class="fa-regular fa-user"></i>
+                  <p>65.500</p>
+                </div>
+              </div>
+            </div>
         </div>
 
         <div id="estadio-13">
-
+          <section>
+            <article>
+              <img src="../assets/images/Estadios/InterCo_Stadium.png" alt="Foto del estadio Inter&Co Stadium">
+            </article>
+            <div>
+              <h3>
+                Inter&Co Stadium
+              </h3>
+              <div>
+                <div class="datos-estadios">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <p>Orlando, FL</p>
+                </div>
+                <div class="datos-estadios">
+                  <i class="fa-regular fa-user"></i>
+                  <p>25.500</p>
+                </div>
+              </div>
+            </div>
         </div>
 
         <div id="estadio-14">
-
+          <section>
+            <article>
+              <img src="../assets/images/Estadios/Levis_Stadium.png" alt="Foto del estadio Levi’s® Stadium">
+            </article>
+            <div>
+              <h3>
+                Levi’s® Stadium
+              </h3>
+              <div>
+                <div class="datos-estadios">
+                  <i class="fa-solid fa-location-dot"></i>
+                  <p>Santa Clara, CA</p>
+                </div>
+                <div class="datos-estadios">
+                  <i class="fa-regular fa-user"></i>
+                  <p>68.500</p>
+                </div>
+              </div>
+            </div>
         </div>
       </div>
     </main>
@@ -124,7 +379,7 @@
               <ul class="textnegrita">
                   <li><a href="../index.html">Home</a></li>
                   <li><a href="grupos.html">Grupos</a></li>
-                  <li><a href="historia.html">Historia</a></li>
+                  <li><a href="noticia.html">Noticia</a></li>
                   <li><a href="contacto.html">Contacto</a></li>
               </ul>
           </div>
