--- a/index.html
+++ b/index.html
@@ -4,6 +4,9 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Bienvenido a nuestra página dedicada a la Copa América, el torneo de selecciones nacionales más antiguo del mundo. Aquí encontrarás toda la información sobre esta prestigiosa competición, que reúne a las mejores selecciones de fútbol de América del Sur en un espectáculo lleno de emoción, rivalidad y talento.">
+  <meta name="keywords" content="
+  Copa America, Fútbol sudamericano, Torneo de selecciones, Conmebol, Equipos nacionales, Historia de la Copa America, Resultados Copa America, Noticias Copa America, Calendario de partidos, Estadisticas Copa America, Sedes de la Copa America, Equipos participantes, Ganadores Copa America, Partidos en vivo, Analisis de partidos, Copa America 2024, Fútbol en América Latina, Rivalidades historicas, Campeonatos sudamericanos">
   <title>Copa America</title>
   <link rel="shortcut icon" href="assets/icons/logo-copa-america-vertical.png" type="image/x-icon">
 
