--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="¿Tienes preguntas, comentarios o sugerencias sobre la Copa América? Nos encantaría saber de ti. En esta sección, puedes encontrar nuestras vías de contacto para compartir tus inquietudes o solicitar más información. Ya sea que desees enviarnos un mensaje, suscribirte a nuestras actualizaciones o seguirnos en nuestras redes sociales, estamos aquí para ayudarte y mantenerte informado sobre todo lo relacionado con la Copa América.">
+  <meta name="keywords" content="Contacto Copa America, Formulario de contacto, Informacion de contacto, Contacto con el equipo, Consulta Copa America, Preguntas frecuentes, Enviar mensaje, Contacto para prensa, Contacto para patrocinadores, Contacto general, Soporte Copa America, Suscripcion a noticias, Redes sociales Copa America, Solicitar informacion, Atencion al cliente, Comentarios y sugerencias, Contacto por correo electronico, Contacto por telefono, Contacto en linea">
   <title>Copa America | Contacto</title>
 
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
