--- a/pages/estadios.html
+++ b/pages/estadios.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Descubre los impresionantes estadios donde se vivirá la emoción de la Copa América. En esta sección, explora los detalles y la historia de cada sede, desde los icónicos campos de juego hasta las modernas instalaciones que acogerán los partidos del torneo. Conoce la capacidad, ubicación y características especiales de cada estadio, y prepárate para disfrutar del mejor fútbol en los escenarios más emblemáticos de América.">
+  <meta name="keywords" content="Estadios Copa América, Sedes Copa America, Estadios del torneo, Campos de juego, Instalaciones deportivas Copa America, Estadios de futbol, Ubicacion de estadios, Capacidad de estadios, Historia de los estadios, Estadios emblematicos, Estadios modernos, Información de sedes, Estadios anfitriones, Estadios de America Latina, Estadios de futbol internacional, Estadios historicos, Estadios del torneo 2024, Partidos en estadios, Estadios y capacidad, Estadios y caracteristicas">
   <title>Copa America | Estadios</title>
 
   <link rel="stylesheet" href="../css/estilos.css">
