--- a/pages/noticia.html
+++ b/pages/noticia.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="Bienvenido a la sección de noticias de la Copa América, tu fuente confiable para estar al día con todo lo que ocurre en el torneo más emocionante de América. Aquí encontrarás las últimas actualizaciones, análisis de expertos, entrevistas exclusivas y reportajes en profundidad sobre los equipos, jugadores y partidos. No te pierdas ningún detalle y mantente informado sobre todo lo que sucede en el mundo de la Copa América.">
+  <meta name="keywords" content="Noticias Copa America, Ultimas noticias Copa America, Actualizaciones del torneo, Noticias de futbol, Noticias de selecciones, Cobertura Copa America, Noticias de equipos, Noticias de jugadores, Reportajes Copa America, Entrevistas exclusivas, Analisis de partidos, Noticias en tiempo real, Resultados Copa America, Noticias de la fase de grupos, Noticias de las eliminatorias, Noticias de la final, Noticias de sedes, Noticias de estadios, Noticias de entrenadores, Noticias de lesiones">
   <title>Copa America | Noticia</title>
 
   <link rel="shortcut icon" href="../assets/icons/logo-copa-america-vertical.png" type="image/x-icon">
