--- a/pages/grupos.html
+++ b/pages/grupos.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="description" content="En esta sección, descubre cómo se dividen los equipos nacionales en los grupos de la Copa América. Cada grupo está compuesto por selecciones que competirán entre sí para avanzar a las fases eliminatorias del torneo. Conoce los equipos que conforman cada grupo, sus estadísticas, partidos programados y resultados en tiempo real. Sumérgete en la emoción de la fase de grupos y sigue de cerca el desempeño de tu selección favorita.">
+  <meta name="keywords" content="Grupos Copa America, Fase de grupos Copa America, Equipos Copa America, Partidos de grupos, Calendario de grupos, Resultados de grupos, Clasificación de grupos, Estadisticas de grupos, Equipos en cada grupo, Sedes de los partidos de grupo, Sorteo de grupos, Analisis de grupos, Competencia de grupos, Calendario de la fase de grupos, Futbol Copa América grupos, Rivales en los grupos, Desempeño de equipos en grupos, Pronosticos de grupos, Noticias de grupos, Copa America 2024 grupos">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 
